// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/search does not show a sidebar where there are no works/images 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <div
          class="Container-sc-1rpw7sp-0 iPJYaE"
        >
          <div
            class="Space-sc-1ntp1c3-0 fOsduC"
          >
            <div
              class="grid"
            >
              <div
                class="grid__cell grid__cell--s12 grid__cell--m10 grid__cell--l10 grid__cell--xl10"
              >
                <p
                  class="font-intr font-size-2 "
                  data-testid="search-no-results"
                >
                  We couldn’t find anything that matched
                   
                  <span
                    class="SearchNoResults__QuerySpan-sc-15t12zq-0 font-intb font-size-2 "
                  >
                    test
                  </span>
                  .
                </p>
                <p
                  class="font-intr font-size-3 "
                  style="max-width: 800px;"
                >
                  Please adjust your search terms and try again. If you think this search should show some results, please email
                   
                  <a
                    href="mailto:digital@wellcomecollection.org"
                  >
                    digital@wellcomecollection.org
                  </a>
                  .
                </p>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main>
      <div
        class="Container-sc-1rpw7sp-0 iPJYaE"
      >
        <div
          class="Space-sc-1ntp1c3-0 fOsduC"
        >
          <div
            class="grid"
          >
            <div
              class="grid__cell grid__cell--s12 grid__cell--m10 grid__cell--l10 grid__cell--xl10"
            >
              <p
                class="font-intr font-size-2 "
                data-testid="search-no-results"
              >
                We couldn’t find anything that matched
                 
                <span
                  class="SearchNoResults__QuerySpan-sc-15t12zq-0 font-intb font-size-2 "
                >
                  test
                </span>
                .
              </p>
              <p
                class="font-intr font-size-3 "
                style="max-width: 800px;"
              >
                Please adjust your search terms and try again. If you think this search should show some results, please email
                 
                <a
                  href="mailto:digital@wellcomecollection.org"
                >
                  digital@wellcomecollection.org
                </a>
                .
              </p>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`/search handles an error fetching addressable results 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <section
          class="Space-sc-1ntp1c3-0 search__BasicSection-sc-1dtt1xc-5 fOsduC"
        >
          <div
            class="Container-sc-1rpw7sp-0 iPJYaE"
          >
            <p
              class="font-intr font-size-5 "
            >
              There was a problem fetching some search results. Please try again. If the problem persists, please contact us.
            </p>
          </div>
          <div
            class="Container-sc-1rpw7sp-0 search__GridContainer-sc-1dtt1xc-11 iPJYaE bBQcHm"
          >
            <div
              class="Space-sc-1ntp1c3-0 search__CatalogueResults-sc-1dtt1xc-13 jTseEw ePDWUj"
            >
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsInner-sc-1dtt1xc-1 lksbpG dwnUni"
              >
                <div
                  class="Space-sc-1ntp1c3-0 gLnzrB is-hidden-l is-hidden-xl"
                >
                  <h3
                    class="font-intsb font-size-4 "
                  >
                    Are you looking for our online collections?
                  </h3>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
                >
                  <h3
                    class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 fnGrWb jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                  >
                    Catalogue results
                  </h3>
                  <div
                    class="Space-sc-1ntp1c3-0 search__CatalogueLinks-sc-1dtt1xc-3 hyBejO grPuPS is-hidden-s is-hidden-m"
                  >
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=a"
                    >
                      Books
                       (
                      3.1K
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=h"
                    >
                      Archives and manuscripts
                       (
                      2.6K
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=g"
                    >
                      Videos
                       (
                      584
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=v"
                    >
                      E-books
                       (
                      426
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=k"
                    >
                      Pictures
                       (
                      358
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=l"
                    >
                      Ephemera
                       (
                      347
                      )
                    </a>
                  </div>
                  <a
                    class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                    href="/search/works?query=test"
                  >
                    All catalogue results (7.8K)
                    <span
                      class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="icon__svg"
                      >
                        <svg
                          viewBox="0 0 24 24"
                        >
                          <path
                            class="icon__shape"
                            d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                            fill="currentColor"
                          />
                        </svg>
                      </svg>
                    </span>
                  </a>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 dJkCqU is-hidden-s is-hidden-m"
                >
                  <div
                    class="Divider__Rule-sc-1s33mra-0 jeCQyB"
                  />
                </div>
                <h3
                  class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 hdUpKd jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                >
                  Image results
                </h3>
                <div
                  class="Space-sc-1ntp1c3-0 search__ImageLinks-sc-1dtt1xc-4 fnGrWb huYRID is-hidden-s is-hidden-m"
                >
                  <div
                    data-testid="image-search-results-container"
                  >
                    <ul
                      class="PlainList-sc-1gq7w2h-0 ImageEndpointSearchResults__ImageCardList-sc-pfedna-1 dsjEru jHRixw"
                    >
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/vmwda9zv/images?id=grcmx3xd"
                            id="grcmx3xd"
                            style="width: 215.80756849999997px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="AIDS and HIV : HIV antibody : to test or not to test?."
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="215.80756849999997"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/vmwda9zv/images?id=r4tvvn2f"
                            id="r4tvvn2f"
                            style="width: 215.80756849999997px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="AIDS and HIV : HIV antibody : to test or not to test?."
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="215.80756849999997"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/xje9d9m9/images?id=b6sn765d"
                            id="b6sn765d"
                            style="width: 238.7832625px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Examining horses: wedge test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000755/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="238.7832625"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/fxdjhxzk/images?id=paw99kme"
                            id="paw99kme"
                            style="width: 237.87878550000002px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Examining horses: wedge test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000754/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="237.87878550000002"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/zh5tztk2/images?id=n46cztsm"
                            id="n46cztsm"
                            style="width: 239.6946475px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Toxoplasmosis: antibody test (ewe)"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000295/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="239.6946475"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/hzyjwfpq/images?id=r8mw6gem"
                            id="r8mw6gem"
                            style="width: 108.33px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Trachoma: visual acuity test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/W0049928/full/128%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="108.33"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/mfmh5ezs/images?id=tcrsnf9g"
                            id="tcrsnf9g"
                            style="width: 228.36364350000002px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Trahcoma: visual acuity test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/W0049935/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="228.36364350000002"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div>
                    <div
                      class="Space-sc-1ntp1c3-0 Modal__BaseModalWindow-sc-17h00ey-2 fSUXSU lodJDs"
                      data-testid="image-modal"
                      hidden=""
                      id="expanded-image-dialog"
                    >
                      <button
                        class="Space-sc-1ntp1c3-0 Modal__CloseButton-sc-17h00ey-1 infjqr fakdFI"
                        data-testid="close-modal-button"
                        type="button"
                      >
                        <span
                          class="visually-hidden"
                        >
                          Close modal window
                        </span>
                        <span
                          class="Icon__Wrapper-sc-1q7cbil-0 iamKZH icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="icon__svg"
                          >
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <path
                                class="icon__shape"
                                d="M18.7 17.3 13.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4s1 .4 1.4 0l5.3-5.3 5.3 5.3c.4.4 1 .4 1.4 0s.4-1 0-1.4"
                                fill="currentColor"
                              />
                            </svg>
                          </svg>
                        </span>
                      </button>
                      <div
                        style="height: 50vh;"
                      >
                        <div
                          class="LL-sc-x0q7d4-0 bpmiwF"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
                >
                  <a
                    class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                    href="/search/images?query=test"
                  >
                    All image results (1.3K)
                    <span
                      class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="icon__svg"
                      >
                        <svg
                          viewBox="0 0 24 24"
                        >
                          <path
                            class="icon__shape"
                            d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                            fill="currentColor"
                          />
                        </svg>
                      </svg>
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="search__ContentResults-sc-1dtt1xc-12 eGtqqv"
            />
          </div>
        </section>
      </main>
    </div>
  </body>,
  "container": <div>
    <main>
      <section
        class="Space-sc-1ntp1c3-0 search__BasicSection-sc-1dtt1xc-5 fOsduC"
      >
        <div
          class="Container-sc-1rpw7sp-0 iPJYaE"
        >
          <p
            class="font-intr font-size-5 "
          >
            There was a problem fetching some search results. Please try again. If the problem persists, please contact us.
          </p>
        </div>
        <div
          class="Container-sc-1rpw7sp-0 search__GridContainer-sc-1dtt1xc-11 iPJYaE bBQcHm"
        >
          <div
            class="Space-sc-1ntp1c3-0 search__CatalogueResults-sc-1dtt1xc-13 jTseEw ePDWUj"
          >
            <div
              class="Space-sc-1ntp1c3-0 search__CatalogueResultsInner-sc-1dtt1xc-1 lksbpG dwnUni"
            >
              <div
                class="Space-sc-1ntp1c3-0 gLnzrB is-hidden-l is-hidden-xl"
              >
                <h3
                  class="font-intsb font-size-4 "
                >
                  Are you looking for our online collections?
                </h3>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
              >
                <h3
                  class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 fnGrWb jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                >
                  Catalogue results
                </h3>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueLinks-sc-1dtt1xc-3 hyBejO grPuPS is-hidden-s is-hidden-m"
                >
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=a"
                  >
                    Books
                     (
                    3.1K
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=h"
                  >
                    Archives and manuscripts
                     (
                    2.6K
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=g"
                  >
                    Videos
                     (
                    584
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=v"
                  >
                    E-books
                     (
                    426
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=k"
                  >
                    Pictures
                     (
                    358
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=l"
                  >
                    Ephemera
                     (
                    347
                    )
                  </a>
                </div>
                <a
                  class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                  href="/search/works?query=test"
                >
                  All catalogue results (7.8K)
                  <span
                    class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon__svg"
                    >
                      <svg
                        viewBox="0 0 24 24"
                      >
                        <path
                          class="icon__shape"
                          d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                          fill="currentColor"
                        />
                      </svg>
                    </svg>
                  </span>
                </a>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 dJkCqU is-hidden-s is-hidden-m"
              >
                <div
                  class="Divider__Rule-sc-1s33mra-0 jeCQyB"
                />
              </div>
              <h3
                class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 hdUpKd jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
              >
                Image results
              </h3>
              <div
                class="Space-sc-1ntp1c3-0 search__ImageLinks-sc-1dtt1xc-4 fnGrWb huYRID is-hidden-s is-hidden-m"
              >
                <div
                  data-testid="image-search-results-container"
                >
                  <ul
                    class="PlainList-sc-1gq7w2h-0 ImageEndpointSearchResults__ImageCardList-sc-pfedna-1 dsjEru jHRixw"
                  >
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/vmwda9zv/images?id=grcmx3xd"
                          id="grcmx3xd"
                          style="width: 215.80756849999997px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="AIDS and HIV : HIV antibody : to test or not to test?."
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="215.80756849999997"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/vmwda9zv/images?id=r4tvvn2f"
                          id="r4tvvn2f"
                          style="width: 215.80756849999997px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="AIDS and HIV : HIV antibody : to test or not to test?."
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="215.80756849999997"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/xje9d9m9/images?id=b6sn765d"
                          id="b6sn765d"
                          style="width: 238.7832625px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Examining horses: wedge test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000755/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="238.7832625"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/fxdjhxzk/images?id=paw99kme"
                          id="paw99kme"
                          style="width: 237.87878550000002px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Examining horses: wedge test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000754/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="237.87878550000002"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/zh5tztk2/images?id=n46cztsm"
                          id="n46cztsm"
                          style="width: 239.6946475px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Toxoplasmosis: antibody test (ewe)"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000295/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="239.6946475"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/hzyjwfpq/images?id=r8mw6gem"
                          id="r8mw6gem"
                          style="width: 108.33px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Trachoma: visual acuity test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/W0049928/full/128%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="108.33"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/mfmh5ezs/images?id=tcrsnf9g"
                          id="tcrsnf9g"
                          style="width: 228.36364350000002px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Trahcoma: visual acuity test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/W0049935/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="228.36364350000002"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                  </ul>
                </div>
                <div>
                  <div
                    class="Space-sc-1ntp1c3-0 Modal__BaseModalWindow-sc-17h00ey-2 fSUXSU lodJDs"
                    data-testid="image-modal"
                    hidden=""
                    id="expanded-image-dialog"
                  >
                    <button
                      class="Space-sc-1ntp1c3-0 Modal__CloseButton-sc-17h00ey-1 infjqr fakdFI"
                      data-testid="close-modal-button"
                      type="button"
                    >
                      <span
                        class="visually-hidden"
                      >
                        Close modal window
                      </span>
                      <span
                        class="Icon__Wrapper-sc-1q7cbil-0 iamKZH icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="icon__svg"
                        >
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              class="icon__shape"
                              d="M18.7 17.3 13.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4s1 .4 1.4 0l5.3-5.3 5.3 5.3c.4.4 1 .4 1.4 0s.4-1 0-1.4"
                              fill="currentColor"
                            />
                          </svg>
                        </svg>
                      </span>
                    </button>
                    <div
                      style="height: 50vh;"
                    >
                      <div
                        class="LL-sc-x0q7d4-0 bpmiwF"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
              >
                <a
                  class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                  href="/search/images?query=test"
                >
                  All image results (1.3K)
                  <span
                    class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon__svg"
                    >
                      <svg
                        viewBox="0 0 24 24"
                      >
                        <path
                          class="icon__shape"
                          d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                          fill="currentColor"
                        />
                      </svg>
                    </svg>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            class="search__ContentResults-sc-1dtt1xc-12 eGtqqv"
          />
        </div>
      </section>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`/search renders full page catalogue and image results when there are no addressable results 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <section
          class="Space-sc-1ntp1c3-0 search__BasicSection-sc-1dtt1xc-5 fOsduC"
        >
          <div
            class="Container-sc-1rpw7sp-0 iPJYaE"
          >
            <p
              class="font-intr font-size-5 "
            >
              9,035
               result
              s
               
              for 
              <span
                class="font-intb font-size-5 "
              >
                test
              </span>
            </p>
          </div>
          <div
            class="Container-sc-1rpw7sp-0 search__GridContainer-sc-1dtt1xc-11 iPJYaE bBQcHm"
          >
            <div
              class="Space-sc-1ntp1c3-0 search__CatalogueResults-sc-1dtt1xc-13 jTseEw ePDWUj"
            >
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsInner-sc-1dtt1xc-1 lksbpG dwnUni"
              >
                <div
                  class="Space-sc-1ntp1c3-0 gLnzrB is-hidden-l is-hidden-xl"
                >
                  <h3
                    class="font-intsb font-size-4 "
                  >
                    Are you looking for our online collections?
                  </h3>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
                >
                  <h3
                    class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 fnGrWb jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                  >
                    Catalogue results
                  </h3>
                  <div
                    class="Space-sc-1ntp1c3-0 search__CatalogueLinks-sc-1dtt1xc-3 hyBejO grPuPS is-hidden-s is-hidden-m"
                  >
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=a"
                    >
                      Books
                       (
                      3.1K
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=h"
                    >
                      Archives and manuscripts
                       (
                      2.6K
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=g"
                    >
                      Videos
                       (
                      584
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=v"
                    >
                      E-books
                       (
                      426
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=k"
                    >
                      Pictures
                       (
                      358
                      )
                    </a>
                    <a
                      class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                      href="/search/works?query=test&workType=l"
                    >
                      Ephemera
                       (
                      347
                      )
                    </a>
                  </div>
                  <a
                    class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                    href="/search/works?query=test"
                  >
                    All catalogue results (7.8K)
                    <span
                      class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="icon__svg"
                      >
                        <svg
                          viewBox="0 0 24 24"
                        >
                          <path
                            class="icon__shape"
                            d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                            fill="currentColor"
                          />
                        </svg>
                      </svg>
                    </span>
                  </a>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 dJkCqU is-hidden-s is-hidden-m"
                >
                  <div
                    class="Divider__Rule-sc-1s33mra-0 jeCQyB"
                  />
                </div>
                <h3
                  class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 hdUpKd jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                >
                  Image results
                </h3>
                <div
                  class="Space-sc-1ntp1c3-0 search__ImageLinks-sc-1dtt1xc-4 fnGrWb huYRID is-hidden-s is-hidden-m"
                >
                  <div
                    data-testid="image-search-results-container"
                  >
                    <ul
                      class="PlainList-sc-1gq7w2h-0 ImageEndpointSearchResults__ImageCardList-sc-pfedna-1 dsjEru jHRixw"
                    >
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/vmwda9zv/images?id=grcmx3xd"
                            id="grcmx3xd"
                            style="width: 215.80756849999997px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="AIDS and HIV : HIV antibody : to test or not to test?."
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="215.80756849999997"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/vmwda9zv/images?id=r4tvvn2f"
                            id="r4tvvn2f"
                            style="width: 215.80756849999997px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="AIDS and HIV : HIV antibody : to test or not to test?."
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="215.80756849999997"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/xje9d9m9/images?id=b6sn765d"
                            id="b6sn765d"
                            style="width: 238.7832625px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Examining horses: wedge test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000755/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="238.7832625"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/fxdjhxzk/images?id=paw99kme"
                            id="paw99kme"
                            style="width: 237.87878550000002px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Examining horses: wedge test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000754/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="237.87878550000002"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/zh5tztk2/images?id=n46cztsm"
                            id="n46cztsm"
                            style="width: 239.6946475px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Toxoplasmosis: antibody test (ewe)"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/A0000295/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="239.6946475"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/hzyjwfpq/images?id=r8mw6gem"
                            id="r8mw6gem"
                            style="width: 108.33px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Trachoma: visual acuity test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/W0049928/full/128%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="108.33"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          class="Space-sc-1ntp1c3-0 lmbczQ"
                        >
                          <a
                            class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                            href="/works/mfmh5ezs/images?id=tcrsnf9g"
                            id="tcrsnf9g"
                            style="width: 228.36364350000002px;"
                          >
                            <div
                              class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                              style="height: 157px;"
                            >
                              <img
                                alt="Trahcoma: visual acuity test"
                                class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                                data-nimg="1"
                                decoding="async"
                                height="157"
                                loading="lazy"
                                src="https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg"
                                srcset="https://iiif.wellcomecollection.org/image/W0049935/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg 2x"
                                style="color: transparent;"
                                width="228.36364350000002"
                              />
                            </div>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div>
                    <div
                      class="Space-sc-1ntp1c3-0 Modal__BaseModalWindow-sc-17h00ey-2 fSUXSU lodJDs"
                      data-testid="image-modal"
                      hidden=""
                      id="expanded-image-dialog"
                    >
                      <button
                        class="Space-sc-1ntp1c3-0 Modal__CloseButton-sc-17h00ey-1 infjqr fakdFI"
                        data-testid="close-modal-button"
                        type="button"
                      >
                        <span
                          class="visually-hidden"
                        >
                          Close modal window
                        </span>
                        <span
                          class="Icon__Wrapper-sc-1q7cbil-0 iamKZH icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="icon__svg"
                          >
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <path
                                class="icon__shape"
                                d="M18.7 17.3 13.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4s1 .4 1.4 0l5.3-5.3 5.3 5.3c.4.4 1 .4 1.4 0s.4-1 0-1.4"
                                fill="currentColor"
                              />
                            </svg>
                          </svg>
                        </span>
                      </button>
                      <div
                        style="height: 50vh;"
                      >
                        <div
                          class="LL-sc-x0q7d4-0 bpmiwF"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
                >
                  <a
                    class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                    href="/search/images?query=test"
                  >
                    All image results (1.3K)
                    <span
                      class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="icon__svg"
                      >
                        <svg
                          viewBox="0 0 24 24"
                        >
                          <path
                            class="icon__shape"
                            d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                            fill="currentColor"
                          />
                        </svg>
                      </svg>
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="search__ContentResults-sc-1dtt1xc-12 eGtqqv"
            />
          </div>
        </section>
      </main>
    </div>
  </body>,
  "container": <div>
    <main>
      <section
        class="Space-sc-1ntp1c3-0 search__BasicSection-sc-1dtt1xc-5 fOsduC"
      >
        <div
          class="Container-sc-1rpw7sp-0 iPJYaE"
        >
          <p
            class="font-intr font-size-5 "
          >
            9,035
             result
            s
             
            for 
            <span
              class="font-intb font-size-5 "
            >
              test
            </span>
          </p>
        </div>
        <div
          class="Container-sc-1rpw7sp-0 search__GridContainer-sc-1dtt1xc-11 iPJYaE bBQcHm"
        >
          <div
            class="Space-sc-1ntp1c3-0 search__CatalogueResults-sc-1dtt1xc-13 jTseEw ePDWUj"
          >
            <div
              class="Space-sc-1ntp1c3-0 search__CatalogueResultsInner-sc-1dtt1xc-1 lksbpG dwnUni"
            >
              <div
                class="Space-sc-1ntp1c3-0 gLnzrB is-hidden-l is-hidden-xl"
              >
                <h3
                  class="font-intsb font-size-4 "
                >
                  Are you looking for our online collections?
                </h3>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
              >
                <h3
                  class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 fnGrWb jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
                >
                  Catalogue results
                </h3>
                <div
                  class="Space-sc-1ntp1c3-0 search__CatalogueLinks-sc-1dtt1xc-3 hyBejO grPuPS is-hidden-s is-hidden-m"
                >
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=a"
                  >
                    Books
                     (
                    3.1K
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=h"
                  >
                    Archives and manuscripts
                     (
                    2.6K
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=g"
                  >
                    Videos
                     (
                    584
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=v"
                  >
                    E-books
                     (
                    426
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=k"
                  >
                    Pictures
                     (
                    358
                    )
                  </a>
                  <a
                    class="search__WorksLink-sc-1dtt1xc-0 bgaLzV font-intr font-size-6 "
                    href="/search/works?query=test&workType=l"
                  >
                    Ephemera
                     (
                    347
                    )
                  </a>
                </div>
                <a
                  class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                  href="/search/works?query=test"
                >
                  All catalogue results (7.8K)
                  <span
                    class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon__svg"
                    >
                      <svg
                        viewBox="0 0 24 24"
                      >
                        <path
                          class="icon__shape"
                          d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                          fill="currentColor"
                        />
                      </svg>
                    </svg>
                  </span>
                </a>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 dJkCqU is-hidden-s is-hidden-m"
              >
                <div
                  class="Divider__Rule-sc-1s33mra-0 jeCQyB"
                />
              </div>
              <h3
                class="Space-sc-1ntp1c3-0 search__CatalogueSectionTitle-sc-1dtt1xc-9 hdUpKd jORqzo font-intsb font-size-4  is-hidden-s is-hidden-m"
              >
                Image results
              </h3>
              <div
                class="Space-sc-1ntp1c3-0 search__ImageLinks-sc-1dtt1xc-4 fnGrWb huYRID is-hidden-s is-hidden-m"
              >
                <div
                  data-testid="image-search-results-container"
                >
                  <ul
                    class="PlainList-sc-1gq7w2h-0 ImageEndpointSearchResults__ImageCardList-sc-pfedna-1 dsjEru jHRixw"
                  >
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/vmwda9zv/images?id=grcmx3xd"
                          id="grcmx3xd"
                          style="width: 215.80756849999997px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="AIDS and HIV : HIV antibody : to test or not to test?."
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0001.jp2/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="215.80756849999997"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/vmwda9zv/images?id=r4tvvn2f"
                          id="r4tvvn2f"
                          style="width: 215.80756849999997px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="AIDS and HIV : HIV antibody : to test or not to test?."
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/b28666112_0002.jp2/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="215.80756849999997"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/xje9d9m9/images?id=b6sn765d"
                          id="b6sn765d"
                          style="width: 238.7832625px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Examining horses: wedge test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000755/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000755/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="238.7832625"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/fxdjhxzk/images?id=paw99kme"
                          id="paw99kme"
                          style="width: 237.87878550000002px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Examining horses: wedge test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000754/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000754/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="237.87878550000002"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/zh5tztk2/images?id=n46cztsm"
                          id="n46cztsm"
                          style="width: 239.6946475px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Toxoplasmosis: antibody test (ewe)"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/A0000295/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/A0000295/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="239.6946475"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/hzyjwfpq/images?id=r8mw6gem"
                          id="r8mw6gem"
                          style="width: 108.33px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Trachoma: visual acuity test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/W0049928/full/128%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049928/full/256%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="108.33"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Space-sc-1ntp1c3-0 lmbczQ"
                      >
                        <a
                          class="ImageCard__StyledLink-sc-1hoq3sy-0 cnxHuT"
                          href="/works/mfmh5ezs/images?id=tcrsnf9g"
                          id="tcrsnf9g"
                          style="width: 228.36364350000002px;"
                        >
                          <div
                            class="IIIFImage__StyledImageContainer-sc-1elk0mt-1 crRTtS"
                            style="height: 157px;"
                          >
                            <img
                              alt="Trahcoma: visual acuity test"
                              class="IIIFImage__StyledImage-sc-1elk0mt-0 kzzMxy"
                              data-nimg="1"
                              decoding="async"
                              height="157"
                              loading="lazy"
                              src="https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg"
                              srcset="https://iiif.wellcomecollection.org/image/W0049935/full/256%2C/0/default.jpg 1x, https://iiif.wellcomecollection.org/image/W0049935/full/640%2C/0/default.jpg 2x"
                              style="color: transparent;"
                              width="228.36364350000002"
                            />
                          </div>
                        </a>
                      </div>
                    </li>
                  </ul>
                </div>
                <div>
                  <div
                    class="Space-sc-1ntp1c3-0 Modal__BaseModalWindow-sc-17h00ey-2 fSUXSU lodJDs"
                    data-testid="image-modal"
                    hidden=""
                    id="expanded-image-dialog"
                  >
                    <button
                      class="Space-sc-1ntp1c3-0 Modal__CloseButton-sc-17h00ey-1 infjqr fakdFI"
                      data-testid="close-modal-button"
                      type="button"
                    >
                      <span
                        class="visually-hidden"
                      >
                        Close modal window
                      </span>
                      <span
                        class="Icon__Wrapper-sc-1q7cbil-0 iamKZH icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="icon__svg"
                        >
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              class="icon__shape"
                              d="M18.7 17.3 13.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4s1 .4 1.4 0l5.3-5.3 5.3 5.3c.4.4 1 .4 1.4 0s.4-1 0-1.4"
                              fill="currentColor"
                            />
                          </svg>
                        </svg>
                      </span>
                    </button>
                    <div
                      style="height: 50vh;"
                    >
                      <div
                        class="LL-sc-x0q7d4-0 bpmiwF"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Space-sc-1ntp1c3-0 search__CatalogueResultsSection-sc-1dtt1xc-2 bOBbxN"
              >
                <a
                  class="search__AllLink-sc-1dtt1xc-10 IOMk font-intsb font-size-5 "
                  href="/search/images?query=test"
                >
                  All image results (1.3K)
                  <span
                    class="Icon__Wrapper-sc-1q7cbil-0 gxegZl icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon__svg"
                    >
                      <svg
                        viewBox="0 0 24 24"
                      >
                        <path
                          class="icon__shape"
                          d="m21.7 11.6-7.5-7.5c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.8 5.8H2.9c-.6 0-1 .4-1 1s.4 1 1 1h15.7l-5.8 5.8c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l7.5-7.5c.4-.4.4-1 0-1.4"
                          fill="currentColor"
                        />
                      </svg>
                    </svg>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            class="search__ContentResults-sc-1dtt1xc-12 eGtqqv"
          />
        </div>
      </section>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
